udagram serverless project added, Demos b4 Auth0 working

--- a/course-04/exercises/lesson-6/solution/serverless.yml
+++ b/course-04/exercises/lesson-6/solution/serverless.yml
@@ -37,7 +37,7 @@ provider:
     AUTH_0_SECRET_FIELD: auth0Secret
 
   iamRoleStatements:
-    - Effect: Allow
+    - Effect: Allow #to use canary deployment
       Action:
         - codedeploy:*
       Resource:
