--- a/course-04/exercises/lesson-5/solution/package.json
+++ b/course-04/exercises/lesson-5/solution/package.json
@@ -11,6 +11,8 @@
     "http-aws-es": "^6.0.0",
     "jimp": "^0.6.4",
     "jsonwebtoken": "^8.5.1",
+    "jwk": "0.0.2",
+    "jwks-rsa": "^1.6.0",
     "middy": "^0.25.0",
     "source-map-support": "^0.5.11",
     "uuid": "^3.3.2"
