--- a/course-04/project/c4-final-project-starter-code/backend/serverless.yml
+++ b/course-04/project/c4-final-project-starter-code/backend/serverless.yml
@@ -1,9 +1,11 @@
 service:
-  name: serverless-todo-app
+  name: sls-todo-app
 
 plugins:
   - serverless-webpack
-  - serverless-iam-roles-per-function
+  #- serverless-iam-roles-per-function
+  - serverless-reqvalidator-plugin
+  #- serverless-aws-documentation
 
 provider:
   name: aws
@@ -12,10 +14,50 @@ provider:
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-east-2'}
 
+  environment:
+    USERS_TABLE: Users-${self:provider.stage}
+    TODO_TABLE: Todo-${self:provider.stage}
+    TODO_ID_INDEX: TodoIdIndex
+    #IMAGES_S3_BUCKET: serverless-udagram-images-${self:provider.stage}
+  
+
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+      Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.USERS_TABLE}
+    - Effect: Allow
+      Action:
+        - dynamodb:PutItem
+        - dynamodb:Query
+        - dynamodb:GetItem #to get a single todo item by id
+      Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODO_TABLE}
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+      Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODO_TABLE}/index/${self:provider.environment.TODO_ID_INDEX}
+
+  documentation:
+    api:
+      info:
+        version: v1.0.0
+        title: ToDo API ##
+        description: Serverless application for ToDo Lists
+    models:
+      - name: TodoRequest
+        contentType: application/json
+        schema: ${file(models/create-todo-request.json)}
+
+    #update request model??*******
+
+
+
 functions:
 
   Auth:
     handler: src/lambda/auth/auth0Authorizer.handler
+    cors: true
 
   # TODO: Configure this function
   GetTodos:
@@ -25,10 +67,10 @@ functions:
           method: get
           path: todos
           cors: true
-          authorizer: Auth
+          authorizer: Auth #####
 
   # TODO: Configure this function
-  GetTodos:
+  #GetTodos:
   CreateTodo:
     handler: src/lambda/http/createTodo.handler
     events:
@@ -37,14 +79,22 @@ functions:
           path: todos
           cors: true
           authorizer: Auth
+          reqValidatorName: RequestBodyValidator
+          documentation:
+            summary: Create a new todo
+            description: Create a new todo
+            requestModels:
+              'application/json': TodoRequest
 
   # # TODO: Configure this function
-  # UpdateTodo:
-  #   handler: src/lambda/http/updateTodo.handler
-  #   events:
-  #     - http:
-  #         method: patch
-  #         path: todos/{todoId}
+  UpdateTodo:
+    handler: src/lambda/http/updateTodo.handler
+    events:
+      - http:
+          method: patch
+          path: todos/{todoId}
+          cors: true
+          authorization: Auth
 
   # # TODO: Configure this function
   # DeleteTodo:
@@ -65,3 +115,62 @@ functions:
 resources:
   Resources:
     # TODO: Add any necessary AWS resources
+    GatewayResponseDefault4XX:
+      Type: AWS::ApiGateway::GatewayResponse
+      Properties:
+        ResponseParameters:
+          gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+          gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+          gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST'"
+        ResponseType: DEFAULT_4XX
+        RestApiId:
+          Ref: ApiGatewayRestApi
+
+    UsersDynamoDBTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
+        TableName: ${self:provider.environment.USERS_TABLE}
+
+    ToDoDynamoDBTable:
+      Type: "AWS::DynamoDB::Table"
+      Properties:
+        AttributeDefinitions:
+          - AttributeName: userId
+            AttributeType: S
+          - AttributeName: createdAt
+            AttributeType: S
+          - AttributeName: todoId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: userId 
+            KeyType: HASH
+          - AttributeName: createdAt
+            KeyType: RANGE
+        GlobalSecondaryIndexes: #list of indexes we want to add to our table
+          - IndexName: ${self:provider.environment.TODO_ID_INDEX}
+            KeySchema:
+            - AttributeName: todoId # this index will hsve only the partition key "hashed" for this index table, and it will be an index for the attribute image id. 
+              KeyType: HASH
+            Projection:
+              ProjectionType: ALL #copy all attributes from the original table
+        BillingMode: PAY_PER_REQUEST
+       # StreamSpecification:
+        #  StreamViewType: NEW_IMAGE
+        TableName: ${self:provider.environment.TODO_TABLE}
+
+
+    RequestBodyValidator:
+      Type: AWS::ApiGateway::RequestValidator
+      Properties:
+        Name: 'request-body-validator'
+        RestApiId:
+          Ref: ApiGatewayRestApi
+        ValidateRequestBody: true
+        ValidateRequestParameters: false
