--- a/course-04/project/c4-final-project-starter-code/backend/serverless.yml
+++ b/course-04/project/c4-final-project-starter-code/backend/serverless.yml
@@ -1,5 +1,5 @@
 service:
-  name: sls-todo-app
+  name: todo-app
 
 plugins:
   - serverless-webpack
@@ -18,25 +18,32 @@ provider:
     USERS_TABLE: Users-${self:provider.stage}
     TODO_TABLE: Todo-${self:provider.stage}
     TODO_ID_INDEX: TodoIdIndex
-    #IMAGES_S3_BUCKET: serverless-udagram-images-${self:provider.stage}
+    IMAGES_S3_BUCKET: todo-attachments-nb${self:provider.stage}
+    SIGNED_URL_EXPIRATION: 300
   
 
   iamRoleStatements:
     - Effect: Allow
       Action:
         - dynamodb:PutItem
-        - dynamodb:UpdateItem
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.USERS_TABLE}
     - Effect: Allow
       Action:
         - dynamodb:PutItem
         - dynamodb:Query
         - dynamodb:GetItem #to get a single todo item by id
+        - dynamodb:UpdateItem
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODO_TABLE}
     - Effect: Allow
       Action:
         - dynamodb:Query
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODO_TABLE}/index/${self:provider.environment.TODO_ID_INDEX}
+    - Effect: Allow
+      Action:
+        - s3:PutObject
+        - s3:GetObject
+      Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
+
 
   documentation:
     api:
@@ -57,7 +64,7 @@ functions:
 
   Auth:
     handler: src/lambda/auth/auth0Authorizer.handler
-    cors: true
+   # cors: true
 
   # TODO: Configure this function
   GetTodos:
@@ -104,14 +111,22 @@ functions:
   #         method: delete
   #         path: todos/{todoId}
 
-  # # TODO: Configure this function
-  # GenerateUploadUrl:
-  #   handler: src/lambda/http/generateUploadUrl.handler
-  #   events:
-  #     - http:
-  #         method: post
-  #         path: todos/{todoId}/attachment
-
+  # TODO: Configure this function
+  GenerateUploadUrl:
+    handler: src/lambda/http/generateUploadUrl.handler
+    events:
+      - http:
+          method: post
+          path: todos/{todoId}/attachment
+          cors: true
+          authorization: Auth
+   # iamRoleStatements:     ##############**********
+      # - Effect: Allow
+      #   Action:
+      #     - s3:PutObject
+      #     - s3:GetObject
+      #   Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
+        
 resources:
   Resources:
     # TODO: Add any necessary AWS resources
@@ -138,32 +153,35 @@ resources:
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.USERS_TABLE}
 
-    ToDoDynamoDBTable:
+    ToDoDynamoDBTable: 
       Type: "AWS::DynamoDB::Table"
       Properties:
         AttributeDefinitions:
           - AttributeName: userId
             AttributeType: S
-          - AttributeName: createdAt
+          - AttributeName: createdAt 
             AttributeType: S
           - AttributeName: todoId
             AttributeType: S
         KeySchema:
           - AttributeName: userId 
             KeyType: HASH
-          - AttributeName: createdAt
+          - AttributeName: createdAt 
             KeyType: RANGE
-        GlobalSecondaryIndexes: #list of indexes we want to add to our table
+        BillingMode: PAY_PER_REQUEST
+        TableName: ${self:provider.environment.TODO_TABLE}
+        LocalSecondaryIndexes: #list of indexes we want to add to our table
           - IndexName: ${self:provider.environment.TODO_ID_INDEX}
             KeySchema:
-            - AttributeName: todoId # this index will hsve only the partition key "hashed" for this index table, and it will be an index for the attribute image id. 
-              KeyType: HASH
+              - AttributeName: userId
+                KeyType: HASH
+              - AttributeName: todoId
+                KeyType: RANGE
+            # - AttributeName: todoId # this index will hsve only the partition key "hashed" for this index table, and it will be an index for the attribute image id. 
+            #   KeyType: HASH
             Projection:
               ProjectionType: ALL #copy all attributes from the original table
-        BillingMode: PAY_PER_REQUEST
-       # StreamSpecification:
-        #  StreamViewType: NEW_IMAGE
-        TableName: ${self:provider.environment.TODO_TABLE}
+       
 
 
     RequestBodyValidator:
@@ -174,3 +192,38 @@ resources:
           Ref: ApiGatewayRestApi
         ValidateRequestBody: true
         ValidateRequestParameters: false
+
+
+
+    AttachmentsBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:provider.environment.IMAGES_S3_BUCKET}
+        CorsConfiguration:
+          CorsRules:
+            -
+              AllowedOrigins:
+                - '*'
+              AllowedHeaders:
+                - '*'
+              AllowedMethods:
+                - GET
+                - PUT
+                - POST
+                - DELETE
+                - HEAD
+              MaxAge: 3000
+
+    BucketPolicy:
+      Type: AWS::S3::BucketPolicy
+      Properties:
+        PolicyDocument:
+          Id: MyPolicy
+          Version: "2012-10-17"
+          Statement:
+            - Sid: PublicReadForGetBucketObjects
+              Effect: Allow
+              Principal: '*'
+              Action: 's3:GetObject'
+              Resource: 'arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*'
+        Bucket: !Ref AttachmentsBucket
