--- a/course-04/project/c4-final-project-starter-code/backend/serverless.yml
+++ b/course-04/project/c4-final-project-starter-code/backend/serverless.yml
@@ -3,9 +3,9 @@ service:
 
 plugins:
   - serverless-webpack
-  #- serverless-iam-roles-per-function
-  - serverless-reqvalidator-plugin
-  #- serverless-aws-documentation
+  - serverless-iam-roles-per-function
+  - serverless-reqvalidator-plugin # to enable the validator
+  - serverless-aws-documentation # to enable the validator
 
 provider:
   name: aws
@@ -33,6 +33,7 @@ provider:
         - dynamodb:Query
         - dynamodb:GetItem #to get a single todo item by id
         - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODO_TABLE}
     - Effect: Allow
       Action:
@@ -44,7 +45,7 @@ provider:
         - s3:GetObject
       Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
 
-
+custom:
   documentation:
     api:
       info:
@@ -55,6 +56,9 @@ provider:
       - name: TodoRequest
         contentType: application/json
         schema: ${file(models/create-todo-request.json)}
+      - name: UpdateRequest
+        contentType: application/json
+        schema: ${file(models/update-todo-request.json)}
 
     #update request model??*******
 
@@ -102,14 +106,22 @@ functions:
           path: todos/{todoId}
           cors: true
           authorization: Auth
-
-  # # TODO: Configure this function
-  # DeleteTodo:
-  #   handler: src/lambda/http/deleteTodo.handler
-  #   events:
-  #     - http:
-  #         method: delete
-  #         path: todos/{todoId}
+          reqValidatorName: RequestBodyValidator
+          documentation:
+            summary: Update a new todo
+            description: Update a new todo
+            requestModels:
+              'application/json': UpdateRequest
+              
+  # TODO: Configure this function
+  DeleteTodo:
+    handler: src/lambda/http/deleteTodo.handler
+    events:
+      - http:
+          method: delete
+          path: todos/{todoId}
+          cors: true
+          authorization: Auth
 
   # TODO: Configure this function
   GenerateUploadUrl:
@@ -120,12 +132,12 @@ functions:
           path: todos/{todoId}/attachment
           cors: true
           authorization: Auth
-   # iamRoleStatements:     ##############**********
-      # - Effect: Allow
-      #   Action:
-      #     - s3:PutObject
-      #     - s3:GetObject
-      #   Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
+    # iamRoleStatements:     ##############**********
+    #     - Effect: Allow
+    #       Action:
+    #         - s3:PutObject
+    #         - s3:GetObject
+    #       Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
         
 resources:
   Resources:
@@ -179,37 +191,6 @@ resources:
             Projection:
               ProjectionType: ALL
 
-    # ToDoDynamoDBTable: 
-    #   Type: "AWS::DynamoDB::Table"
-    #   Properties:
-    #     AttributeDefinitions:
-    #       - AttributeName: userId
-    #         AttributeType: S
-    #       - AttributeName: createdAt 
-    #         AttributeType: S
-    #       - AttributeName: todoId
-    #         AttributeType: S
-    #     KeySchema:
-    #       - AttributeName: userId 
-    #         KeyType: HASH
-    #       - AttributeName: createdAt 
-    #         KeyType: RANGE
-    #     BillingMode: PAY_PER_REQUEST
-    #     TableName: ${self:provider.environment.TODO_TABLE}
-    #     LocalSecondaryIndexes: #list of indexes we want to add to our table
-    #       - IndexName: ${self:provider.environment.TODO_ID_INDEX}
-    #         KeySchema:
-    #           - AttributeName: todoId #userId
-    #             KeyType: HASH
-    #           # - AttributeName: todoId
-    #           #   KeyType: RANGE
-    #         # - AttributeName: todoId # this index will hsve only the partition key "hashed" for this index table, and it will be an index for the attribute image id. 
-    #         #   KeyType: HASH
-    #         Projection:
-    #           ProjectionType: ALL #copy all attributes from the original table
-       
-
-
     RequestBodyValidator:
       Type: AWS::ApiGateway::RequestValidator
       Properties:
@@ -218,7 +199,6 @@ resources:
           Ref: ApiGatewayRestApi
         ValidateRequestBody: true
         ValidateRequestParameters: false
-
 
 
     AttachmentsBucket:
@@ -253,3 +233,34 @@ resources:
               Action: 's3:GetObject'
               Resource: 'arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*'
         Bucket: !Ref AttachmentsBucket
+
+    # ToDoDynamoDBTable: 
+    #   Type: "AWS::DynamoDB::Table"
+    #   Properties:
+    #     AttributeDefinitions:
+    #       - AttributeName: userId
+    #         AttributeType: S
+    #       - AttributeName: createdAt 
+    #         AttributeType: S
+    #       - AttributeName: todoId
+    #         AttributeType: S
+    #     KeySchema:
+    #       - AttributeName: userId 
+    #         KeyType: HASH
+    #       - AttributeName: createdAt 
+    #         KeyType: RANGE
+    #     BillingMode: PAY_PER_REQUEST
+    #     TableName: ${self:provider.environment.TODO_TABLE}
+    #     LocalSecondaryIndexes: #list of indexes we want to add to our table
+    #       - IndexName: ${self:provider.environment.TODO_ID_INDEX}
+    #         KeySchema:
+    #           - AttributeName: todoId #userId
+    #             KeyType: HASH
+    #           # - AttributeName: todoId
+    #           #   KeyType: RANGE
+    #         # - AttributeName: todoId # this index will hsve only the partition key "hashed" for this index table, and it will be an index for the attribute image id. 
+    #         #   KeyType: HASH
+    #         Projection:
+    #           ProjectionType: ALL #copy all attributes from the original table
+       
+
